// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdvancedSearchLink /> AdvancedSearchLink matches snapshot 1`] = `
<Styled(Link)
  data-test-id="search-dialog-advanced-search-link"
  href="www.atlassian.com"
  isKeyboardHighlighted={false}
  onClick={[Function]}
/>
`;

exports[`<AdvancedSearchLink /> AdvancedSearchLink matches snapshot when keyboard highlighted 1`] = `
<Styled(Link)
  data-test-id="search-dialog-advanced-search-link"
  href="www.atlassian.com"
  isKeyboardHighlighted={true}
  onClick={[Function]}
/>
`;

exports[`<AdvancedSearchLink /> AdvancedSearchLink matches snapshot with custom component 1`] = `
<Styled(Link)
  data-test-id="search-dialog-advanced-search-link"
  href="www.atlassian.com"
  isKeyboardHighlighted={false}
  linkComponent={[Function]}
  onClick={[Function]}
/>
`;
